--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <nav class="navbar navbar-dark bg-dark fixed-top" style="height: 5rem;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="" alt="" width="30" height="24" class="d-inline-block align-text-top">
-                Yeahdevil
+                <img src="logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top">
+                   Yeahdevil
             </a>
             <button class="navbar-toggler" id="contactbtn" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
@@ -69,16 +69,16 @@
         <div class="card border-0 shadow my-5">
             <div class="card-body p-5">
                 <div class="text-center">
-                    <img src="..." class="rounded">
+                    <img src="logo.png" style="height: 150px; width:150px;" class="rounded">
                     <h1 class="fw-light">Yeahdevil</h1>
                     <button type="button" class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#modal">
                         Socials
                     </button>
                 </div>
-                <p class="lead">In this snippet, the background image is fixed to the body element. Content on the page
-                    will
-                    scroll, but the image will remain in a fixed position!</p>
-                <p class="lead mb-0">You've reached the end!</p>
+                <p class="lead">
+                    Hey! My name is Deepak Mittal aka Yeahdevil, I am a software developer by profession and I love to play lots of games. 
+                </p>
+                <p class="lead mb-0">To follow me click socials.</p>
             </div>
         </div>
     </div>
